--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-#top-bar #flash-infos {
+#top-bar #flash-infos div {
   max-width: 100%;
   width: 1000px;
 }
-#top-bar button {
-  font-size: 0.6em;
-  font-weight: bold;
+#top-bar #flash-infos span {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 #top-bar .input-group {
   width: 40%;
@@ -23,7 +23,7 @@ header #banner img:nth-child(2) {
   width: 65%;
 }
 header #banner img:last-child {
-  width: 10%;
+  width: 70%;
 }
 
 #header-img img {
