--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,8 +12,6 @@
     }
 
     .input-group {
-        width: 40%;
-
         .input-group-text {
             background-color: transparent !important;
         }
@@ -49,4 +47,24 @@ header {
 footer {
     background-color: #062b46;
     color: white;  
+}
+
+.mapdiv {
+    /* margin-top: 30px;
+    margin-left: 20px; */
+
+    svg {
+        border: 1px solid;
+
+        path {
+            fill: #9d2322;
+            stroke: #062b46;
+            stroke-width: 1px;
+            transition: fill 0.3s;
+        }
+    }
+
+    :hover {
+        fill: #062b46;
+    }
 }
